<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/zenit_silver"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_mision"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
            android:textColor="@color/zenit_text_primary"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/text_mision"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textColor="@color/zenit_text_secondary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/title_vision"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
            android:textColor="@color/zenit_text_primary"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/text_vision"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textColor="@color/zenit_text_secondary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/title_actividad"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
            android:textColor="@color/zenit_text_primary"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/text_actividad"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textColor="@color/zenit_text_secondary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonVolverMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/action_volver_menu" />
    </LinearLayout>
</ScrollView>
